pre-seed aztec contract artifacts (#17)
